# Initfetch

./: README.md  dune-project  initfetch.opam
_build/: .db  .digest-db  log
_build/default/: initfetch.dune-package  initfetch.install
_build/default/lib/: initfetch.cma  initfetch.cmxa  initfetch.cmxs  initfetch.ml  initfetch__.ml-gen  logoinit.ml
_build/default/lib/.initfetch.objs/: initfetch.impl.all-deps  initfetch.impl.d  initfetch__Logoinit.impl.d
_build/default/lib/.initfetch.objs/byte/: initfetch.cmi  initfetch.cmo  initfetch.cmt  initfetch__.cmi  initfetch__.cmo  initfetch__.cmt  initfetch__Logoinit.cmi  initfetch__Logoinit.cmo  initfetch__Logoinit.cmt
_build/default/lib/.initfetch.objs/native/: initfetch.cmx  initfetch__.cmx  initfetch__Logoinit.cmx
_build/default/lib/.merlin-conf/: lib-initfetch
_build/default/test/.merlin-conf/: exe-test_initfetch
_build/default/test/.test_initfetch.eobjs/byte/: dune__exe__Test_initfetch.cmi  dune__exe__Test_initfetch.cmti
_build/default/test/.test_initfetch.eobjs/native/: dune__exe__Test_initfetch.cmx
_build/install/default/lib/initfetch/: META  dune-package  opam
lib/: dune  initfetch.ml
test/: dune
test/asset/: initfetch.json  status.runit  status.runit.name  status.systemd  status.systemd.name
